gccida/c3/get_attr_length_immediate
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14263:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14288:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14290:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14290:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14518:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( symbolic_operand( recog_data_0.operand[1], SImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14526:78: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( unsigned int)( v18 - 7) < 3 || ( _DWORD)flag_pic && symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                                                             ^~~~~~~~~~~~
                                                                             recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14560:71: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( unsigned int)( which_alternative - 2) <= 2 && aligned_operand( recog_data_0.operand[1], HImode) ) 
                                                                      ^~~~~~~~~~~~
                                                                      recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14606:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( q_regs_operand( recog_data_0.operand[0], QImode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14645:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( symbolic_operand( recog_data_0.operand[1], DImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14652:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( ( _DWORD)flag_pic && symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14662:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14714:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14726:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[2]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14734:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14746:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14760:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[2]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14766:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( incdec_operand( recog_data_0.operand[2], HImode) || which_alternative == 2 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14776:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v5 = recog_data_0.operand[2]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/insn-attrtab.c:14782:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( incdec_operand( recog_data_0.operand[2], QImode) || which_alternative == 3 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_attr_length_immediate/src/obj/insn-attrtab.o] Error 1
